--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -16,16 +16,26 @@ permissions:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: ${{ matrix.OS }}
+    strategy:
+      matrix:
+        OS: [ "ubuntu-latest", "macos-latest", "windows-latest" ]
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: 'sbt'
-    - name: Run tests
-      run: sbt test
+        fetch-depth: 0
+    - uses: coursier/cache-action@v6.3
+    - uses: VirtusLab/scala-cli-setup@v1.4.3
+    - run: scala-cli test .
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#    - uses: actions/checkout@v3
+#    - name: Set up JDK 11
+#      uses: actions/setup-java@v3
+#      with:
+#        java-version: '11'
+#        distribution: 'temurin'
+#        cache: 'sbt'
+#    - name: Run tests
+#      run: sbt test
