--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -24,7 +24,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - uses: coursier/cache-action@v6.3
+#    - uses: coursier/cache-action@v6.3
     - uses: VirtusLab/scala-cli-setup@v1.4.3
     - run: scala-cli test .
 #    runs-on: ubuntu-latest
