--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -19,23 +19,13 @@ jobs:
     runs-on: ${{ matrix.OS }}
     strategy:
       matrix:
-        OS: [ "ubuntu-latest", "macos-latest", "windows-latest" ]
+        OS: [ "ubuntu-latest", "macos-latest" ]
+#        OS: [ "ubuntu-latest", "macos-latest", "windows-latest" ]
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-#    - uses: coursier/cache-action@v6.3
+    - uses: coursier/cache-action@v6
     - uses: VirtusLab/scala-cli-setup@v1.4.3
-    - run: scala-cli test .
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#    - uses: actions/checkout@v3
-#    - name: Set up JDK 11
-#      uses: actions/setup-java@v3
-#      with:
-#        java-version: '11'
-#        distribution: 'temurin'
-#        cache: 'sbt'
-#    - name: Run tests
-#      run: sbt test
+    - name: Run tests
+      run: scala-cli test .
