include packaging branch on ci trigger

--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -7,7 +7,7 @@ name: Scala CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master" , "packaging"]
   pull_request:
     branches: [ "master" ]
 
